--- a/anon-build/pom.xml
+++ b/anon-build/pom.xml
@@ -32,4 +32,32 @@
 			../anon-gui
 		</module>
 	</modules>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.5.1</version>
+
+				<configuration>
+					<outputDirectory>target/distribution</outputDirectory>
+					<finalName>anonimecsFree</finalName>
+					<descriptors>
+						<descriptor>assembly/free_edition.xml</descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+
+			</plugin>		
+		</plugins>
+	</build>
 </project> 
