basic login feature with admin/123456

--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -225,6 +225,11 @@
 			<artifactId>anon-service</artifactId>
 			<version>${anon.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.anon</groupId>
+			<artifactId>anon-security</artifactId>
+			<version>${anon.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
