--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -10,7 +10,8 @@
 		<skip.tests>true</skip.tests>
 		<anon.version>0.1-SNAPSHOT</anon.version>
 
-		<spring.version>3.2.5.RELEASE</spring.version>
+		<spring.version>3.2.8.RELEASE</spring.version>
+		<spring.security.version>3.2.3.RELEASE</spring.security.version>
 		<log4j.version>1.2.14</log4j.version>
 	</properties>
 
