--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -15,7 +15,19 @@
 
 	<properties>
 		<jettyVersion>9.0.0.v20130308</jettyVersion>
+		<webXmlPath>src/main/webapp/WEB-INF/web.xml</webXmlPath>
+		<edition>enterprise</edition>
 	</properties>
+
+	<profiles>
+	    <profile>
+	        <id>free</id>
+	        <properties>
+	            <webXmlPath>src/main/webapp/WEB-INF/free_edition_web.xml</webXmlPath>
+	            <edition>free</edition>
+	        </properties>
+	    </profile>
+	</profiles>
 
 	<build>
 		<plugins>
@@ -32,7 +44,8 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
 				<configuration>
-					<warName>${project.artifactId}-${project.version}</warName>
+					<warName>${project.artifactId}-${project.version}-${edition}</warName>
+					<webXml>${webXmlPath}</webXml>
 					<archive>
 						<manifest>
 							<mainClass>AnonJettyStarter</mainClass>
