distribution management tested for free and enterprise, windows and unix

--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>org.anon</groupId>
 			<artifactId>anon-test</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${anon.version}</version>
 		</dependency>
 	</dependencies>
 </project>
