--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -1,16 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+   	<groupId>org.anon</groupId>
 	<artifactId>anon-test</artifactId>
-  	<version>${anon.version}</version>
+  	<version>0.9-SNAPSHOT</version>
   	
-  	<parent>
-    	<groupId>org.anon</groupId>
-    	<artifactId>anon-parent-pom</artifactId>
-    	<relativePath>../anon-parent-pom/pom.xml</relativePath>
-    	<version>1.0</version>
-  	</parent>
-
+	<properties>
+		<spring.version>3.2.8.RELEASE</spring.version> <!-- this needs to be the same as in anon-parent-pom -->
+	</properties>
 
 	<dependencies>
 		<dependency>
