--- a/anon-core/pom.xml
+++ b/anon-core/pom.xml
@@ -92,6 +92,43 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			
+<!-- 			<plugin> -->
+<!-- 				<groupId>com.github.wvengen</groupId> -->
+<!-- 			    <artifactId>proguard-maven-plugin</artifactId> -->
+<!-- 			    <version>2.0.8</version> -->
+<!-- 			    <executions> -->
+<!-- 			    	<execution> -->
+<!-- 			        	<phase>package</phase> -->
+<!-- 			       		<goals><goal>proguard</goal></goals> -->
+<!-- 			    	</execution> -->
+<!-- 			    </executions> -->
+<!-- 			    <configuration> -->
+<!-- 			    	<obfuscate>true</obfuscate> -->
+<!-- 			    	<includeDependency>true</includeDependency> -->
+<!-- 			    	<options> -->
+<!--                     	<option>-keepdirectories</option> -->
+<!--                     	<option>-keepparameternames</option>   -->
+<!-- 						<option>-keep public class *</option> -->
+<!-- 						<option>-keep enum org.anon.data.AnonymizationType { *; }</option> -->
+<!-- 						<option>-keep enum org.anon.AnonStatic { *; }</option> -->
+<!-- 					</options> -->
+<!-- 			    	<libs> -->
+<!-- 			        	<lib>${java.home}/lib/rt.jar</lib> -->
+<!-- 			        	<lib>${java.home}/lib/jce.jar</lib>                       -->
+<!--                     	<lib>${java.home}/lib/jsse.jar</lib> -->
+<!-- 			    	</libs> -->
+<!-- 				</configuration> -->
+<!-- 				<dependencies> -->
+<!-- 			    	<dependency> -->
+<!-- 			        	<groupId>net.sf.proguard</groupId> -->
+<!-- 						<artifactId>proguard-base</artifactId> -->
+<!-- 						<version>4.8</version> -->
+<!-- 						<scope>runtime</scope> -->
+<!-- 					</dependency> -->
+<!-- 				</dependencies> -->
+<!-- 			</plugin> -->
+			
 		</plugins>
 
 	</build>
