use IPs instead of urls on jenkins tests

--- a/anon-test/src/main/resources/jenkins.test.properties
+++ b/anon-test/src/main/resources/jenkins.test.properties
@@ -1,11 +1,11 @@
-#this is the test db configuration for ci.reicherdt.net
+#this is the test db configuration for jenkins on ci.reicherdt.net
 
-sybase.test.url=jdbc:sybase:Tds:sybase.db.reicherdt.net:5000
-sybase.test.user=anon
+sybase.test.url=jdbc:sybase:Tds:192.168.1.42:5000
+sybase.test.user=sa
 sybase.test.passwd=AnonSybase
-sybase.test.schema=anontest
+sybase.test.schema=anon
 
-oracle.test.url=jdbc:oracle:thin:@oracle.db.reicherdt.net:1521
+oracle.test.url=jdbc:oracle:thin:@192.168.1.41:1521
 oracle.test.user=ECAP
 oracle.test.passwd=ecap
 oracle.test.schema=ECAP
