--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -170,6 +170,16 @@
 			<artifactId>bootstrap</artifactId>
 			<version>1.0.9</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.ocpsoft.rewrite</groupId>
+		    <artifactId>rewrite-servlet</artifactId>
+		    <version>2.0.12.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ocpsoft.rewrite</groupId>
+			<artifactId>rewrite-integration-faces</artifactId>
+			<version>2.0.12.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
