fix test on jenkins

--- a/anon-test/src/main/resources/jenkins.test.properties
+++ b/anon-test/src/main/resources/jenkins.test.properties
@@ -3,7 +3,7 @@
 sybase.test.url=jdbc:sybase:Tds:192.168.1.42:5000
 sybase.test.user=sa
 sybase.test.passwd=AnonSybase
-sybase.test.schema=anon
+sybase.test.schema=pubs2
 
 oracle.test.url=jdbc:oracle:thin:@192.168.1.41:1521
 oracle.test.user=ECAP
