--- a/anon-gui/src/main/resources/log4j.properties
+++ b/anon-gui/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
-log4j.rootCategory=INFO, stdout
+log4j.rootCategory=DEBUG, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-log4j.category.org.springframework=WARN
-log4j.category.org.hibernate=WARN
+log4j.category.org.springframework=INFO
+log4j.category.org.hibernate=INFO
