transfer skin to external project

--- a/anon-build/pom.xml
+++ b/anon-build/pom.xml
@@ -32,6 +32,9 @@
 			../anon-security
 		</module>
 		<module>
+			../anon-gui-skin
+		</module>
+		<module>
 			../anon-gui
 		</module>
 	</modules>
