junit tests create test tables - can run on any schema now

--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -43,6 +43,7 @@
 			<groupId>org.anon</groupId>
 			<artifactId>anon-test</artifactId>
 			<version>${anon.test.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
