--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -34,6 +34,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -54,6 +64,19 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>		
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+				
+		
 		<dependency>
 	  		<groupId>com.github.markusbernhardt</groupId>
 	  		<artifactId>robotframework-selenium2library-java</artifactId>
