--- a/anon-security/pom.xml
+++ b/anon-security/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
   	</dependencies>
   
 </project>
