--- a/anon-core/pom.xml
+++ b/anon-core/pom.xml
@@ -80,6 +80,13 @@
 			<version>7.07.ESD5</version>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.17</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 
