--- a/anon-test/src/main/resources/jenkins.test.properties
+++ b/anon-test/src/main/resources/jenkins.test.properties
@@ -9,3 +9,8 @@ oracle.test.url=jdbc:oracle:thin:@192.168.1.41:1521
 oracle.test.user=ECAP
 oracle.test.passwd=ecap
 oracle.test.schema=ECAP
+
+mysql.test.url=jdbc:mysql://192.168.1.14:3306/anontest
+mysql.test.user=anontest
+mysql.test.passwd=anontest
+mysql.test.schema=anontest
