--- a/anon-test/src/main/resources/jenkins.test.properties
+++ b/anon-test/src/main/resources/jenkins.test.properties
@@ -1,6 +1,6 @@
 #this is the test db configuration for jenkins on ci.reicherdt.net
 
-sybase.test.url=jdbc:sybase:Tds:192.168.1.42:5000
+sybase.test.url=jdbc:sybase:Tds:192.168.1.42:5000/pubs2
 sybase.test.user=anontest
 sybase.test.passwd=anontest
 sybase.test.schema=pubs2
