new oracle reshuffle finally working / moved security dependency to enterprise pom

--- a/anon-enterprise-only/pom.xml
+++ b/anon-enterprise-only/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>anon-exec</artifactId>
 			<version>${anon.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.anon</groupId>
+			<artifactId>anon-security</artifactId>
+			<version>${anon.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
