closes #40 and itroduces mockito:mock test beans

--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -45,5 +45,11 @@
 			<version>${anon.test.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.kubek2k</groupId>
+			<artifactId>springockito</artifactId>
+			<version>1.0.9</version>
+			<scope>test</scope>
+		</dependency>			
 	</dependencies>
 </project>
