--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -65,6 +65,13 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.kubek2k</groupId>
+			<artifactId>springockito</artifactId>
+			<version>1.0.9</version>
+		</dependency>		
+
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
