--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -14,6 +14,9 @@
 		<spring.version>3.2.8.RELEASE</spring.version> <!-- this needs to be the same as in anon-test -->
 		<spring.security.version>3.2.3.RELEASE</spring.security.version>
 		<log4j.version>1.2.14</log4j.version>
+		
+	    <!-- github server corresponds to entry inmaven settings.xml -->
+	    <github.global.server>github</github.global.server>
 	</properties>
 
 	<build>
@@ -35,8 +38,51 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<!-- stading the release builds in target/mvn-repo -->
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.9</version>
+				<configuration>
+					<message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+					<noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+					<branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<repositoryName>anon-repo</repositoryName>      <!-- github repo name -->
+					<repositoryOwner>abaxsoraszem</repositoryOwner>    <!-- github username -->
+				</configuration>
+				<executions>
+					<!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+	</distributionManagement>
 	
 	<dependencies>
 		<dependency>
@@ -52,4 +98,6 @@
 			<scope>test</scope>
 		</dependency>			
 	</dependencies>
+	
+	
 </project>
