--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -10,7 +10,21 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<skipITs>true</skipITs>
 	</properties>
+
+	<scm>
+		<connection>scm:git:git@github.com:anonimecs/anon-repo.git</connection>
+		<url>scm:git:git@github.com:anonimecs/anon-repo.git</url>
+		<developerConnection>scm:git:git@github.com:anonimecs/anon-repo.git</developerConnection>
+	</scm>
 	
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${systempath.altDeploymentRepository}</url>
+		</repository>
+	</distributionManagement>
+		
 	<build>
 		<plugins>
 			<plugin>
@@ -44,6 +58,23 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.1</version>
+			</plugin> 
+			
+			<!-- staging the release builds in local folder: systempath.altDeploymentRepository must be defined in settings.xml -->
+			<!-- this local folder will be pushed to github: https://github.com/anonimecs/m2_deploymentRepository.git -->
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${systempath.altDeploymentRepository}</altDeploymentRepository>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 
