--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
    	<groupId>org.anon</groupId>
 	<artifactId>anon-test</artifactId>
-  	<version>0.9-SNAPSHOT</version>
+  	<version>0.9</version>
   	
 	<properties>
 		<spring.version>3.2.8.RELEASE</spring.version> <!-- this needs to be the same as in anon-parent-pom -->
@@ -15,7 +14,8 @@
 		<connection>scm:git:git@github.com:anonimecs/anon-repo.git</connection>
 		<url>scm:git:git@github.com:anonimecs/anon-repo.git</url>
 		<developerConnection>scm:git:git@github.com:anonimecs/anon-repo.git</developerConnection>
-	</scm>
+	  <tag>anon-test-0.9</tag>
+  </scm>
 	
 	<distributionManagement>
 		<repository>
