--- a/anon-test/pom.xml
+++ b/anon-test/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
    	<groupId>org.anon</groupId>
 	<artifactId>anon-test</artifactId>
-  	<version>0.9</version>
+  	<version>0.10-SNAPSHOT</version>
   	
 	<properties>
 		<spring.version>3.2.8.RELEASE</spring.version> <!-- this needs to be the same as in anon-parent-pom -->
@@ -14,7 +14,7 @@
 		<connection>scm:git:git@github.com:anonimecs/anon-repo.git</connection>
 		<url>scm:git:git@github.com:anonimecs/anon-repo.git</url>
 		<developerConnection>scm:git:git@github.com:anonimecs/anon-repo.git</developerConnection>
-	  <tag>anon-test-0.9</tag>
+	  <tag>HEAD</tag>
   </scm>
 	
 	<distributionManagement>
