--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -9,7 +9,7 @@
 	<properties>
 		<skip.tests>true</skip.tests>
 		<anon.version>0.1-SNAPSHOT</anon.version>
-		<anon.test.version>0.9-SNAPSHOT</anon.test.version>
+		<anon.test.version>0.9</anon.test.version>
 
 		<spring.version>3.2.8.RELEASE</spring.version> <!-- this needs to be the same as in anon-test -->
 		<spring.security.version>3.2.3.RELEASE</spring.security.version>
