--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -19,6 +19,22 @@
 	    <github.global.server>github</github.global.server>
 	</properties>
 
+	<scm>
+		<connection>scm:git:git@github.com:anonimecs/anon-repo.git</connection>
+		<url>scm:git:git@github.com:anonimecs/anon-repo.git</url>
+		<developerConnection>scm:git:git@github.com:anonimecs/anon-repo.git</developerConnection>
+	  <tag>HEAD</tag>
+   </scm>
+	
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${systempath.altDeploymentRepository}</url>
+		</repository>
+	</distributionManagement>
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -39,50 +55,26 @@
 				</configuration>
 			</plugin>
 
-			<!-- stading the release builds in target/mvn-repo -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.1</version>
+			</plugin> 
+			
+			<!-- staging the release builds in local folder: systempath.altDeploymentRepository must be defined in settings.xml -->
+			<!-- this local folder will be pushed to github: https://github.com/anonimecs/m2_deploymentRepository.git -->
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.1</version>
 				<configuration>
-					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+					<altDeploymentRepository>internal.repo::default::file://${systempath.altDeploymentRepository}</altDeploymentRepository>
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.11</version>
-				<configuration>
-					<message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
-					<noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
-					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
-					<branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
-					<includes>
-						<include>**/*</include>
-					</includes>
-					<repositoryName>anon-repo</repositoryName>      <!-- github repo name -->
-					<repositoryOwner>anonimecs</repositoryOwner>    <!-- github username -->
-				</configuration>
-				<executions>
-					<!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
-					<execution>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<phase>deploy</phase>
-					</execution>
-				</executions>
-			</plugin>
+			
 		</plugins>
 	</build>
 
-	<distributionManagement>
-		<repository>
-			<id>internal.repo</id>
-			<name>Temporary Staging Repository</name>
-			<url>file://${project.build.directory}/mvn-repo</url>
-		</repository>
-	</distributionManagement>
 	
 	<dependencies>
 		<dependency>
