--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.anon</groupId>
 	<artifactId>anon-parent-pom</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -22,7 +22,7 @@
 		<connection>scm:git:git@github.com:anonimecs/anon-repo.git</connection>
 		<url>scm:git:git@github.com:anonimecs/anon-repo.git</url>
 		<developerConnection>scm:git:git@github.com:anonimecs/anon-repo.git</developerConnection>
-	  <tag>anon-parent-pom-1.0</tag>
+	  <tag>HEAD</tag>
    </scm>
 	
 	<distributionManagement>
