--- a/anon-exec/pom.xml
+++ b/anon-exec/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>anon-exec</artifactId>
-	<version>${anon.version}</version>
+
 	<parent>
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
 		<relativePath>../anon-parent-pom/pom.xml</relativePath>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 
 
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.anon</groupId>
 			<artifactId>anon-core</artifactId>
-			<version>${anon.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -26,7 +26,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>3.2.5.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
