--- a/anon-gui/pom.xml
+++ b/anon-gui/pom.xml
@@ -2,14 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>anon-gui</artifactId>
-	<version>${anon.version}</version>
 	<packaging>war</packaging>
 
 	<parent>
 		<groupId>org.anon</groupId>
 		<artifactId>anon-parent-pom</artifactId>
 		<relativePath>../anon-parent-pom/pom.xml</relativePath>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 
 
@@ -68,12 +67,12 @@
 				<dependency>
 					<groupId>org.anon</groupId>
 					<artifactId>anon-enterprise-only</artifactId>
-					<version>${anon.version}</version>
+					<version>${project.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.anon</groupId>
 					<artifactId>anon-security</artifactId>
-					<version>${anon.version}</version>
+					<version>${project.version}</version>
 				</dependency>
 			</dependencies>
 	    </profile>
@@ -240,24 +239,20 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 
 		<!-- logging -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
 		</dependency>
 
 		<dependency>
@@ -292,28 +287,28 @@
 		<dependency>
 			<groupId>org.anon</groupId>
 			<artifactId>anon-persistence</artifactId>
-			<version>${anon.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.anon</groupId>
 			<artifactId>anon-exec</artifactId>
-			<version>${anon.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.anon</groupId>
 			<artifactId>anon-service</artifactId>
-			<version>${anon.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.anon</groupId>
 			<artifactId>anon-gui-skin</artifactId>
-			<version>${anon.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.anon</groupId> -->
 <!-- 			<artifactId>anon-enterprise-only</artifactId> -->
-<!-- 			<version>${anon.version}</version> -->
+<!-- 			<version>${project.version}</version> -->
 <!-- 		</dependency> -->
 		
 	</dependencies>
