--- a/anon-security/pom.xml
+++ b/anon-security/pom.xml
@@ -2,40 +2,34 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   	<modelVersion>4.0.0</modelVersion>
   	<artifactId>anon-security</artifactId>
-  	<version>${anon.version}</version>
   	
   	<parent>
     	<groupId>org.anon</groupId>
     	<artifactId>anon-parent-pom</artifactId>
     	<relativePath>../anon-parent-pom/pom.xml</relativePath>
-    	<version>1.0</version>
+    	<version>1.1-SNAPSHOT</version>
   	</parent>
   	
   	<dependencies>
   		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
   		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>${spring.security.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring.security.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>${spring.security.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
   	</dependencies>
   
