--- a/anon-parent-pom/pom.xml
+++ b/anon-parent-pom/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.anon</groupId>
 	<artifactId>anon-parent-pom</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -22,7 +21,7 @@
 		<connection>scm:git:git@github.com:anonimecs/anon-repo.git</connection>
 		<url>scm:git:git@github.com:anonimecs/anon-repo.git</url>
 		<developerConnection>scm:git:git@github.com:anonimecs/anon-repo.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>anon-parent-pom-1.1</tag>
 	</scm>
 
 	<distributionManagement>
@@ -83,7 +82,7 @@
 		<dependency>
 			<groupId>org.anon</groupId>
 			<artifactId>anon-test</artifactId>
-			<version>${anon.test.version}</version>
+			<version>0.10</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
